crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_brief_panel_120x30.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
expression: text
---
╔═══════════ C:\Users\demo\projects\filecommand ═══════════╗
║▶UP--DIR◄                                                 ║
║docs                                                      ║
║Cargo.toml                                                ║
║readme.txt                                                ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
║                                                          ║
╚═════════════════════ docs  SUB-DIR ══════════════════════╝
