crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_brief_panel_60x16.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
assertion_line: 105
expression: text
---
╔ C:\Users\demo\projects\file╗
║▶UP--DIR◄                   ║
║docs                        ║
║Cargo.toml                  ║
║readme.txt                  ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚══════ docs  SUB-DIR ═══════╝
