crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_brief_panel_70x20.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
expression: text
---
╔ C:\Users\demo\projects\filecomma╗
║▶UP--DIR◄                        ║
║docs                             ║
║Cargo.toml                       ║
║readme.txt                       ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
╚═════════ docs  SUB-DIR ═════════╝
