crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_full_panel_60x16.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
assertion_line: 97
expression: text
---
╔ C:\Users\demo\projects\file╗
║Name↓           │ Size      ║
║..              │ ▶UP--DI   ║
║docs            │ ▶SUB-DI   ║
║Cargo.toml      │ 612       ║
║readme.txt      │ 12K       ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
║                            ║
╚══════ docs  SUB-DIR ═══════╝
