crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_full_panel_70x20.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
expression: text
---
╔ C:\Users\demo\projects\filecomma╗
║Name↓        │ Size    Date      ║
║..           │ ▶UP--DI           ║
║docs         │ ▶SUB-DI 01-02-2   ║
║Cargo.toml   │ 612     01-02-2   ║
║readme.txt   │ 12K     01-02-2   ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
║                                 ║
╚═════════ docs  SUB-DIR ═════════╝
