crates/filecommand-tui/tests/snapshots/snapshot_matrix__matrix_help_window_60x16.snap
---
source: crates/filecommand-tui/tests/snapshot_matrix.rs
expression: text
---
                                                            
 ╔═════════════════════════ Help ═════════════════════════╗ 
 ║               FileCommand Version 0.1.0                ║ 
 ║       Copyright (C) 2026 The FileCommand Authors       ║ 
 ║      Inspired by the Norton Commander, 1986-1998       ║ 
 ╠────────────────────────────────────────────────────────╣ 
 ║ About FileCommand                                      ║ 
 ║ Keyboard reference                                     ║ 
 ║ Mouse                                                  ║ 
 ║ Panels and display modes                               ║ 
 ║ File operations                                        ║ 
 ║ Menus                                                 ↓║ 
 ╠────────────────────────────────────────────────────────╣ 
 ║                    Help     Cancel                     ║ 
 ╚════════════════════════════════════════════════════════╝
